# couriercxx

./: .cproject  .gitignore  .project  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md  config.doxygen  makefile.targets
Debug/: makefile  sources.mk
Debug-WIN/: makefile  sources.mk
Debug-WIN/couriercxx/connection/: subdir.mk
Debug-WIN/couriercxx/connection/event/: subdir.mk
Debug-WIN/couriercxx/connector/: subdir.mk
Debug-WIN/couriercxx/connector/bluetooth/: subdir.mk
Debug-WIN/couriercxx/connector/gpio/: subdir.mk
Debug-WIN/couriercxx/connector/i2c/: subdir.mk
Debug-WIN/couriercxx/db/: subdir.mk
Debug-WIN/couriercxx/device/: subdir.mk
Debug-WIN/couriercxx/event/: subdir.mk
Debug-WIN/couriercxx/exception/: subdir.mk
Debug-WIN/couriercxx/image/: subdir.mk
Debug-WIN/couriercxx/logger/: subdir.mk
Debug-WIN/couriercxx/network/: subdir.mk
Debug-WIN/couriercxx/property/: subdir.mk
Debug-WIN/couriercxx/sound/: subdir.mk
Debug-WIN/couriercxx/util/: subdir.mk
Debug/couriercxx/connection/: subdir.mk
Debug/couriercxx/connector/: subdir.mk
Debug/couriercxx/db/: subdir.mk
Debug/couriercxx/device/: subdir.mk
Debug/couriercxx/event/: subdir.mk
Debug/couriercxx/exception/: subdir.mk
Debug/couriercxx/image/: subdir.mk
Debug/couriercxx/logger/: subdir.mk
Debug/couriercxx/net/: subdir.mk
Debug/couriercxx/network/: subdir.mk
Debug/couriercxx/property/: subdir.mk
Debug/couriercxx/server/: subdir.mk
Debug/couriercxx/sound/: subdir.mk
Debug/couriercxx/util/: subdir.mk
Release/: makefile  sources.mk
Release-WIN/couriercxx/connection/: subdir.mk
Release-WIN/couriercxx/connector/: subdir.mk
Release-WIN/couriercxx/db/: subdir.mk
Release-WIN/couriercxx/device/: subdir.mk
Release-WIN/couriercxx/event/: subdir.mk
Release-WIN/couriercxx/exception/: subdir.mk
Release-WIN/couriercxx/image/: subdir.mk
Release-WIN/couriercxx/logger/: subdir.mk
Release-WIN/couriercxx/network/: subdir.mk
Release-WIN/couriercxx/property/: subdir.mk
Release-WIN/couriercxx/sound/: subdir.mk
Release-WIN/couriercxx/util/: subdir.mk
Release/couriercxx/connection/: subdir.mk
Release/couriercxx/connector/: subdir.mk
Release/couriercxx/db/: subdir.mk
Release/couriercxx/device/: subdir.mk
Release/couriercxx/event/: subdir.mk
Release/couriercxx/exception/: subdir.mk
Release/couriercxx/image/: subdir.mk
Release/couriercxx/logger/: subdir.mk
Release/couriercxx/net/: subdir.mk
Release/couriercxx/network/: subdir.mk
Release/couriercxx/property/: subdir.mk
Release/couriercxx/server/: subdir.mk
Release/couriercxx/sound/: subdir.mk
Release/couriercxx/util/: subdir.mk
couriercxx/: CMakeLists.txt  Types.h
couriercxx/connection/: Connection.cpp  Connection.h  ConnectionType.h  IConcurrentDatasource.h  IDatasource.h  Info.cpp  Info.h  SerialPortBaseDatasource.cpp  SerialPortBaseDatasource.h  SerialPortBusDatasource.cpp  SerialPortBusDatasource.h  SerialPortBusEventDrivenDatasource.cpp  SerialPortBusEventDrivenDatasource.h
couriercxx/connection/event/: EventConnection.cpp  EventConnection.h  EventRead.cpp  EventRead.h  EventStatus.cpp  EventStatus.h  EventWrite.cpp  EventWrite.h
couriercxx/connector/: IConnectorBase.cpp  IConnectorBase.h
couriercxx/connector/bluetooth/: BluetoothPortBase.cpp  BluetoothPortBase.h
couriercxx/connector/gpio/: GPIOPortBase.cpp  GPIOPortBase.h
couriercxx/connector/i2c/: I2CPortBase.cpp  I2CPortBase.h
couriercxx/connector/scsi/: SCSIPortBase.cpp  SCSIPortBase.h
couriercxx/connector/serialport/: SerialPortBase.cpp  SerialPortBase.h  SerialPortBus.cpp  SerialPortBus.h
couriercxx/connector/spi/: GPIOSPIPortBase.cpp  GPIOSPIPortBase.h  SPIPortBase.cpp  SPIPortBase.h
couriercxx/connector/tcp/: TCPPortBase.cpp  TCPPortBase.h
couriercxx/connector/udp/: UDPPortBase.cpp  UDPPortBase.h
couriercxx/db/: PostgresConnector.cpp  PostgresConnector.h  Value.h
couriercxx/device/: IDevice.cpp  IDevice.h
couriercxx/device/bluetooth/: BluetoothDevice.cpp  BluetoothDevice.h
couriercxx/event/: Callback.h  Dispatcher.cpp  Dispatcher.h  DispatcherBase.cpp  DispatcherBase.h  IEvent.cpp  IEvent.h  IListener.cpp  IListener.h  ListenerParams.h  WrappedListener.cpp  WrappedListener.h
couriercxx/event/event/: EventTimeout.cpp  EventTimeout.h
couriercxx/exception/: ConversionErrorException.cpp  ConversionErrorException.h
couriercxx/image/: BMP.cpp  BMP.h  JPG.cpp  JPG.h
couriercxx/logger/: Log.cpp  Log.h  Logger.cpp  Logger.h
couriercxx/net/: Net.cpp  Net.h  Protocols.h  Sniffer.cpp  Sniffer.h
couriercxx/network/: Net.cpp  Net.h  Protocols.h  Sniffer.cpp  Sniffer.h
couriercxx/network/http/: Client.cpp  Client.h  Http.h  Request.cpp  Request.h  Server.cpp  Server.h
couriercxx/network/tcp/: Client.cpp  Client.h  Server.cpp  Server.h
couriercxx/network/udp/: Client.cpp  Client.h  Server.cpp  Server.h
couriercxx/property/: IProperty.cpp  IProperty.h  Property.cpp  Property.h  PropertyDatabase.cpp  PropertyDatabase.h  PropertyFile.cpp  PropertyFile.h
couriercxx/server/: Request.cpp  Request.h  Server.cpp  Server.h
couriercxx/sound/: PWM.cpp  PWM.h
couriercxx/struct/: ConcurrentList.h  ConcurrentMap.h  ConcurrentQueue.h
couriercxx/util/: ByteOrder.cpp  ByteOrder.h  Clock.cpp  Clock.h  Config.cpp  Config.h  ConfigBase.cpp  ConfigBase.h  Daemon.cpp  Daemon.h  Hardware.cpp  Hardware.h  IO.cpp  IO.h  Net.cpp  Net.h  SignalWatcher.cpp  SignalWatcher.h  String.cpp  String.h  System.cpp  System.h  Time.cpp  Time.h
examples/: BluetoothPortExample.cpp  CMakeLists.txt  ConfigurationDatabaseExample.cpp  GPIOPortExample.cpp  I2CPortExample.cpp  NetExample.cpp  PWMExample.cpp  SPIExample.cpp  SPIPortExample.cpp  SerialPortExample.cpp  ServerExample.cpp  SnifferExample.cpp  make
tests/: BMPTest.cpp  CMakeLists.txt  ClockTest.cpp  HTTPClientTest.cpp  JPGTest.cpp  LoopPortTest.cpp  NonBlockSerialPortTest.cpp  SerialPortTimeoutTest.cpp  UDPClientTest.cpp  UDPServerTest.cpp  UDPTest.cpp  make
utils/: CMakeLists.txt  GPIOPinUtil.cpp  PortObserverTest.cpp  PortTest.cpp  PortUtil.cpp  make
(+50 files in other folders)
