add_executable(ConfigurationDatabaseExample ConfigurationDatabaseExample.cpp)
add_executable(GPIOPortExample GPIOPortExample.cpp)
add_executable(I2CPortExample I2CPortExample.cpp)
add_executable(NetExample NetExample.cpp)
add_executable(PWMExample PWMExample.cpp)
add_executable(SerialPortExample SerialPortExample.cpp)
add_executable(ServerExample ServerExample.cpp)

if(UNIX)
	add_executable(BluetoothPortExample BluetoothPortExample.cpp)
	add_executable(SnifferExample SnifferExample.cpp)
endif(UNIX)

target_link_libraries(ConfigurationDatabaseExample CourierCXX ${LIBPQ_LIB} ${LIBPQXX_LIB})
target_link_libraries(GPIOPortExample CourierCXX)
target_link_libraries(I2CPortExample CourierCXX)
target_link_libraries(NetExample CourierCXX)
target_link_libraries(PWMExample CourierCXX)
target_link_libraries(SerialPortExample CourierCXX)
target_link_libraries(ServerExample CourierCXX ${LIBEVENT_LIB} Threads::Threads)

if(UNIX)
	target_link_libraries(BluetoothPortExample CourierCXX "bluetooth")
	target_link_libraries(SnifferExample CourierCXX "pcap" Threads::Threads)
endif(UNIX)

target_include_directories(ConfigurationDatabaseExample PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../)
target_include_directories(GPIOPortExample PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../)
target_include_directories(I2CPortExample PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../)
target_include_directories(NetExample PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../)
target_include_directories(PWMExample PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../)
target_include_directories(SerialPortExample PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../)
target_include_directories(ServerExample PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../)

if(UNIX)
	target_include_directories(BluetoothPortExample PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../)
	target_include_directories(SnifferExample PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../)
endif(UNIX)
