add_executable(BMPTest BMPTest.cpp)
add_executable(ClockTest ClockTest.cpp)
add_executable(HTTPClientTest HTTPClientTest.cpp)
add_executable(JPGTest JPGTest.cpp)
add_executable(LoopPortTest LoopPortTest.cpp)
add_executable(NonBlockSerialPortTest NonBlockSerialPortTest.cpp)
add_executable(SerialPortTimeoutTest SerialPortTimeoutTest.cpp)
add_executable(UDPClientTest UDPClientTest.cpp)
add_executable(UDPServerTest UDPServerTest.cpp)

target_link_libraries(BMPTest CourierCXX)
target_link_libraries(ClockTest CourierCXX)
target_link_libraries(HTTPClientTest CourierCXX "event")
target_link_libraries(JPGTest CourierCXX "jpeg")
target_link_libraries(LoopPortTest CourierCXX)
target_link_libraries(NonBlockSerialPortTest CourierCXX)
target_link_libraries(SerialPortTimeoutTest CourierCXX)
target_link_libraries(UDPClientTest CourierCXX)
target_link_libraries(UDPServerTest PRIVATE CourierCXX "pthread")

target_include_directories(BMPTest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../)
target_include_directories(ClockTest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../)
target_include_directories(HTTPClientTest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../)
target_include_directories(JPGTest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../)
target_include_directories(LoopPortTest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../)
target_include_directories(NonBlockSerialPortTest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../)
target_include_directories(SerialPortTimeoutTest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../)
target_include_directories(UDPClientTest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../)
target_include_directories(UDPServerTest PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../)
